Handle overflow in and of table, fix column widths

--- a/public/boxAStylesheet.css
+++ b/public/boxAStylesheet.css
@@ -1,6 +1,8 @@
 .box-A {
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-auto-rows: 10%;
     grid-column-start: 1;
     grid-column-end: 6;
     grid-row-start: 1;
@@ -8,10 +10,10 @@
 }
 
 .tab {
-    width: 50%;
-    height: 10%;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    height: 100%;
     outline: solid 1px black;
-    float: left;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,9 +27,12 @@
 }
 
 .tabContent {
-    height: 90%;
+    grid-row-start: 2;
+    grid-row-end: 11;
+    grid-column-start: 1;
+    grid-column-end: 3;
     width: 100%;
-    padding: 0 2em;
+    padding: 0 1em 1em;
     background-color: rgb(255, 255, 255);
 }
 
@@ -68,11 +73,15 @@
 }
 
 .topList{
-    height: 51%
+    width: 100%;
+    height: 51%;
+    overflow-y: auto;
 }
 
 .bottomList{
+    width: 100%;
     height: 41%;
+    overflow-y: auto;
 }
 
 .headerRow{
@@ -93,9 +102,17 @@
     height: 1.5em;
     background-color: rgb(255, 255, 255);
 }
-
-.valueCell{
+td{
+    padding: 0;
     border: solid 1px black;
+    height: 1.1em;
+}
+.valueCell{
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    padding: 1px;
+    
 }
 
 .selectedRow{
