--- a/public/globalStylesheet.css
+++ b/public/globalStylesheet.css
@@ -25,7 +25,7 @@ body {
     padding: 1.5em 2em;
     display: grid;
     gap: 2em;
-    /* (100% - gap * (columns - 1)) / columns */
+    /* grid-auto columns is (100% - gap * (columns - 1)) / columns */
     grid-auto-columns: calc((100% - 2em * 8) / 9);
 }
 
@@ -60,6 +60,7 @@ body {
 .heading {
     font-size: 10pt;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
 }
 
 .value {
